// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TicketMessageEmbeddedCard/> render should render the comment card with different text positions 1`] = `
<Card
  className="genericCard"
  tag="div"
>
  <CardBody
    tag="div"
  >
    <Row
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Col
        className="verticalCenter"
        md="7"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <div
          className="mr-2"
        >
          <Avatar
            email="some_email@foo.com"
            name="some_sender_name"
            size={36}
            style={Object {}}
          />
        </div>
        <div
          className="verticalCenter"
        >
          <div
            className="customerNameBody"
          >
            some_sender_firstname
             
            some_sender_lastname
          </div>
          <div>
            <span
              className="source"
            >
              <SourceIcon
                className="uncolored"
                type="facebook-comment"
              />
            </span>
          </div>
          <div>
            <Meta
              integrationId={1}
              messageId="123"
              source={
                Object {
                  "from": Object {
                    "address": "some_from_address",
                    "name": "some_from_name",
                  },
                  "to": Array [
                    Object {
                      "address": "some_from_address",
                      "name": "some_from_name",
                    },
                  ],
                  "type": "facebook-comment",
                }
              }
              via=""
            />
          </div>
        </div>
      </Col>
      <Col
        className="text-right justify-content-center align-self-center dateTimeText"
        md="5"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Connect(DatetimeLabelContainer)
          dateTime="Sun Nov 01 2020 01:01:01 UTC+0000"
        />
      </Col>
    </Row>
    <Row
      className="mt-2"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Col
        md="12"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <span
          className="textBlock"
        >
          some comment
        </span>
      </Col>
    </Row>
  </CardBody>
</Card>
`;

exports[`<TicketMessageEmbeddedCard/> render should render the comment card with different text positions 2`] = `
<Card
  className="genericCard"
  tag="div"
>
  <CardBody
    tag="div"
  >
    <Row
      className="m-0"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Col
        className="avatarContainer"
        md="1"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Avatar
          email="some_email@foo.com"
          name="some_sender_name"
          size={36}
          style={Object {}}
        />
      </Col>
      <Col
        md="11"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Row
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <Col
            md="7"
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <div
              className="verticalCenter"
            >
              <div
                className="customerNameBody"
              >
                some_sender_firstname
                 
                some_sender_lastname
              </div>
              <div>
                <span
                  className="source"
                >
                  <SourceIcon
                    className="uncolored"
                    type="facebook-comment"
                  />
                </span>
              </div>
              <div>
                <Meta
                  integrationId={1}
                  messageId="123"
                  source={
                    Object {
                      "from": Object {
                        "address": "some_from_address",
                        "name": "some_from_name",
                      },
                      "to": Array [
                        Object {
                          "address": "some_from_address",
                          "name": "some_from_name",
                        },
                      ],
                      "type": "facebook-comment",
                    }
                  }
                  via=""
                />
              </div>
            </div>
          </Col>
          <Col
            className="text-right justify-content-center align-self-center dateTimeText pr-0"
            md="5"
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <Connect(DatetimeLabelContainer)
              dateTime="Sun Nov 01 2020 01:01:01 UTC+0000"
            />
          </Col>
        </Row>
        <Row
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <Col
            className="pr-0 mt-2"
            md="12"
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <span
              className="textBlock"
            >
              some comment
            </span>
          </Col>
        </Row>
      </Col>
    </Row>
  </CardBody>
</Card>
`;

exports[`<TicketMessageEmbeddedCard/> render should render the comment card with with or without attachments 1`] = `
<Card
  className="genericCard"
  tag="div"
>
  <CardBody
    tag="div"
  >
    <Row
      className="m-0"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Col
        className="avatarContainer"
        md="1"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Avatar
          email="some_email@foo.com"
          name="some_sender_name"
          size={36}
          style={Object {}}
        />
      </Col>
      <Col
        md="11"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Row
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <Col
            md="7"
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <div
              className="verticalCenter"
            >
              <div
                className="customerNameBody"
              >
                some_sender_firstname
                 
                some_sender_lastname
              </div>
              <div>
                <span
                  className="source"
                >
                  <SourceIcon
                    className="uncolored"
                    type="facebook-comment"
                  />
                </span>
              </div>
              <div>
                <Meta
                  integrationId={1}
                  messageId="123"
                  source={
                    Object {
                      "from": Object {
                        "address": "some_from_address",
                        "name": "some_from_name",
                      },
                      "to": Array [
                        Object {
                          "address": "some_from_address",
                          "name": "some_from_name",
                        },
                      ],
                      "type": "facebook-comment",
                    }
                  }
                  via=""
                />
              </div>
            </div>
          </Col>
          <Col
            className="text-right justify-content-center align-self-center dateTimeText pr-0"
            md="5"
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <Connect(DatetimeLabelContainer)
              dateTime="Sun Nov 01 2020 01:01:01 UTC+0000"
            />
          </Col>
        </Row>
        <Row
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <Col
            className="pr-0 mt-2"
            md="12"
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <span
              className="textBlock"
            >
              some comment
            </span>
          </Col>
        </Row>
      </Col>
    </Row>
    <Row
      className="mt-2"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Col
        md="12"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <TicketAttachments
          attachments={
            Immutable.List [
              Immutable.Map {
                "content_type": "foo_content",
                "name": "foo_name",
                "size": 123,
                "url": "foo_URL",
                "type": "foo_type",
              },
            ]
          }
          removable={false}
        />
      </Col>
    </Row>
  </CardBody>
</Card>
`;

exports[`<TicketMessageEmbeddedCard/> render should render the comment card with with or without attachments 2`] = `
<Card
  className="genericCard"
  tag="div"
>
  <CardBody
    tag="div"
  >
    <Row
      className="m-0"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Col
        className="avatarContainer"
        md="1"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Avatar
          email="some_email@foo.com"
          name="some_sender_name"
          size={36}
          style={Object {}}
        />
      </Col>
      <Col
        md="11"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Row
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <Col
            md="7"
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <div
              className="verticalCenter"
            >
              <div
                className="customerNameBody"
              >
                some_sender_firstname
                 
                some_sender_lastname
              </div>
              <div>
                <span
                  className="source"
                >
                  <SourceIcon
                    className="uncolored"
                    type="facebook-comment"
                  />
                </span>
              </div>
              <div>
                <Meta
                  integrationId={1}
                  messageId="123"
                  source={
                    Object {
                      "from": Object {
                        "address": "some_from_address",
                        "name": "some_from_name",
                      },
                      "to": Array [
                        Object {
                          "address": "some_from_address",
                          "name": "some_from_name",
                        },
                      ],
                      "type": "facebook-comment",
                    }
                  }
                  via=""
                />
              </div>
            </div>
          </Col>
          <Col
            className="text-right justify-content-center align-self-center dateTimeText pr-0"
            md="5"
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <Connect(DatetimeLabelContainer)
              dateTime="Sun Nov 01 2020 01:01:01 UTC+0000"
            />
          </Col>
        </Row>
        <Row
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <Col
            className="pr-0 mt-2"
            md="12"
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <span
              className="textBlock"
            >
              some comment
            </span>
          </Col>
        </Row>
      </Col>
    </Row>
    <Row
      className="mt-2"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Col
        md="12"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <TicketAttachments
          attachments={Immutable.List []}
          removable={false}
        />
      </Col>
    </Row>
  </CardBody>
</Card>
`;

exports[`<TicketMessageEmbeddedCard/> render should render the comment card with with or without attachments 3`] = `
<Card
  className="genericCard"
  tag="div"
>
  <CardBody
    tag="div"
  >
    <Row
      className="m-0"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Col
        className="avatarContainer"
        md="1"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Avatar
          email="some_email@foo.com"
          name="some_sender_name"
          size={36}
          style={Object {}}
        />
      </Col>
      <Col
        md="11"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Row
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <Col
            md="7"
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <div
              className="verticalCenter"
            >
              <div
                className="customerNameBody"
              >
                some_sender_firstname
                 
                some_sender_lastname
              </div>
              <div>
                <span
                  className="source"
                >
                  <SourceIcon
                    className="uncolored"
                    type="facebook-comment"
                  />
                </span>
              </div>
              <div>
                <Meta
                  integrationId={1}
                  messageId="123"
                  source={
                    Object {
                      "from": Object {
                        "address": "some_from_address",
                        "name": "some_from_name",
                      },
                      "to": Array [
                        Object {
                          "address": "some_from_address",
                          "name": "some_from_name",
                        },
                      ],
                      "type": "facebook-comment",
                    }
                  }
                  via=""
                />
              </div>
            </div>
          </Col>
          <Col
            className="text-right justify-content-center align-self-center dateTimeText pr-0"
            md="5"
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <Connect(DatetimeLabelContainer)
              dateTime="Sun Nov 01 2020 01:01:01 UTC+0000"
            />
          </Col>
        </Row>
        <Row
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <Col
            className="pr-0 mt-2"
            md="12"
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <span
              className="textBlock"
            >
              some comment
            </span>
          </Col>
        </Row>
      </Col>
    </Row>
  </CardBody>
</Card>
`;

exports[`<TicketMessageEmbeddedCard/> render should render the comment card with with or without messageCreatedDatetime 1`] = `
<Card
  className="genericCard"
  tag="div"
>
  <CardBody
    tag="div"
  >
    <Row
      className="m-0"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Col
        className="avatarContainer"
        md="1"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Avatar
          email="some_email@foo.com"
          name="some_sender_name"
          size={36}
          style={Object {}}
        />
      </Col>
      <Col
        md="11"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Row
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <Col
            md="7"
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <div
              className="verticalCenter"
            >
              <div
                className="customerNameBody"
              >
                some_sender_firstname
                 
                some_sender_lastname
              </div>
              <div>
                <span
                  className="source"
                >
                  <SourceIcon
                    className="uncolored"
                    type="facebook-comment"
                  />
                </span>
              </div>
              <div>
                <Meta
                  integrationId={1}
                  messageId="123"
                  source={
                    Object {
                      "from": Object {
                        "address": "some_from_address",
                        "name": "some_from_name",
                      },
                      "to": Array [
                        Object {
                          "address": "some_from_address",
                          "name": "some_from_name",
                        },
                      ],
                      "type": "facebook-comment",
                    }
                  }
                  via=""
                />
              </div>
            </div>
          </Col>
          <Col
            className="text-right justify-content-center align-self-center dateTimeText pr-0"
            md="5"
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <Connect(DatetimeLabelContainer)
              dateTime="Sun Nov 01 2020 01:01:01 UTC+0000"
            />
          </Col>
        </Row>
        <Row
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <Col
            className="pr-0 mt-2"
            md="12"
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <span
              className="textBlock"
            >
              some comment
            </span>
          </Col>
        </Row>
      </Col>
    </Row>
  </CardBody>
</Card>
`;

exports[`<TicketMessageEmbeddedCard/> render should render the comment card with with or without messageCreatedDatetime 2`] = `
<Card
  className="genericCard"
  tag="div"
>
  <CardBody
    tag="div"
  >
    <Row
      className="m-0"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Col
        className="avatarContainer"
        md="1"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Avatar
          email="some_email@foo.com"
          name="some_sender_name"
          size={36}
          style={Object {}}
        />
      </Col>
      <Col
        md="11"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Row
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <Col
            md="12"
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <div
              className="verticalCenter"
            >
              <div
                className="customerNameBody"
              >
                some_sender_firstname
                 
                some_sender_lastname
              </div>
              <div>
                <span
                  className="source"
                >
                  <SourceIcon
                    className="uncolored"
                    type="facebook-comment"
                  />
                </span>
              </div>
              <div>
                <Meta
                  integrationId={1}
                  messageId="123"
                  source={
                    Object {
                      "from": Object {
                        "address": "some_from_address",
                        "name": "some_from_name",
                      },
                      "to": Array [
                        Object {
                          "address": "some_from_address",
                          "name": "some_from_name",
                        },
                      ],
                      "type": "facebook-comment",
                    }
                  }
                  via=""
                />
              </div>
            </div>
          </Col>
        </Row>
        <Row
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <Col
            className="pr-0 mt-2"
            md="12"
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <span
              className="textBlock"
            >
              some comment
            </span>
          </Col>
        </Row>
      </Col>
    </Row>
  </CardBody>
</Card>
`;
